--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
     <navbar-eiei></navbar-eiei>
 
     <div class="min-h-[85vh] flex items-center justify-center p-4 flex-1">
-        <div class="w-full max-w-lg">
+        <div id="signin-container" class="w-full max-w-lg hidden"> 
             <div class="bg-white/80 backdrop-blur-md rounded-3xl shadow-2xl p-8 md:p-10 border border-gray-300">
                 <div class="text-center mb-8">
                     <div
