--- a/signin.html
+++ b/signin.html
@@ -100,7 +100,7 @@
                 <div class="mt-8 text-center">
                     <p class="text-sm text-gray-500">
                         ยังไม่มีบัญชี?
-                        <a href="/signUp.html"
+                        <a href="/signup.html"
                             class="text-blue-600 hover:text-blue-700 font-bold hover:underline transition-colors ml-1">
                             สมัครสมาชิก
                         </a>
