--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
 
     <main class="flex-1 py-10 bg-gray-50">
         <div class="max-w-7xl mx-auto px-6">
-            <h1 class="text-3xl font-bold text-blue-500 mb-8 flex items-center gap-3">
+            <h1 class="text-3xl font-bold text-[#00B7EB] mb-8 flex items-center gap-3">
                 <i data-lucide="shopping-cart" class="w-8 h-8 text-blue-600"></i> ตะกร้าสินค้าของคุณ
             </h1>
 
