--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,7 @@
                         </div>
                         
                         <button id="checkout-button" 
-                            class="w-full mt-6 py-3 bg-blue-600 text-white font-bold rounded-xl hover:bg-blue-700 transition-colors disabled:bg-gray-400" 
+                            class="w-full mt-6 py-3 bg-blue-600 text-white font-bold rounded-xl hover:bg-blue-700 transition-colors disabled:bg-blue-600" 
                             disabled>
                             ดำเนินการชำระเงิน
                         </button>
