--- a/index.html
+++ b/index.html
@@ -161,43 +161,43 @@
             <p>ครอบคลุมแหล่งช้อปปิ้งชั้นนำทั่วโลก</p>
         </div>
         <div class="marquee-wrapper w-full overflow-hidden mb-[30px] flex">
-            <div class="country-track track-1 border border-red-500 flex gap-[30px] w-max pl-[30px]">
-                <img src="https://flagcdn.com/w320/jp.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/kr.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/cn.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/sg.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/th.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/vn.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/my.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/tw.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/jp.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/kr.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/cn.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/sg.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/th.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/vn.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/my.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/tw.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+            <div class="country-track track-1 flex gap-[30px] w-max pl-[30px]">
+                <img src="https://flagcdn.com/w320/jp.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/kr.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/cn.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/sg.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/th.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/vn.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/my.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/tw.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/jp.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/kr.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/cn.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/sg.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/th.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/vn.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/my.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/tw.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
             </div>
         </div>
         <div class="marquee-wrapper w-full overflow-hidden mb-[30px] flex">
-            <div class="country-track track-2 border border-red-500 flex gap-[30px] w-max pl-[30px]">
-                 <img src="https://flagcdn.com/w320/us.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/gb.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/fr.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/it.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/de.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/au.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/ca.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/ch.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/us.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/gb.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/fr.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/it.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/de.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/au.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/ca.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/ch.png" class="flag-img w-[180px] h-[110px] object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+            <div class="country-track track-2  flex gap-[30px] w-max pl-[30px]">
+                 <img src="https://flagcdn.com/w320/us.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/gb.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/fr.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/it.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/de.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/au.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/ca.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/ch.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/us.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/gb.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/fr.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/it.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/de.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/au.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/ca.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                <img src="https://flagcdn.com/w320/ch.png" class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
             </div>
         </div>
     </section>
