--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-['Prompt',sans-serif]">
 
     <navbar-eiei></navbar-eiei>
 
