--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,12 @@
                     <h2 id="display-name" class="text-xl font-bold text-gray-900">User</h2>
                     <p id="display-email" class="text-sm text-gray-500 mb-3">...</p>
                     <span id="role-badge"
-                        class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-gray-100 text-gray-600">CUSTOMER</span>
+                        class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-gray-100 text-gray-600">
+                        CUSTOMER
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-3.5 h-3.5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="3">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </span>
 
                     <div class="mt-6 pt-6 border-t border-gray-100 text-sm text-left space-y-3">
                         <div class="flex justify-between text-gray-500"><span>วันที่สมัคร</span><span id="created-at"
