--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
                         
                         <div class="flex justify-between text-lg font-bold text-gray-900 border-t pt-4">
                             <span>ยอดรวมทั้งหมด:</span>
-                            <span id="total-price" class="text-red-600">฿0.00</span>
+                            <span id="total-price" class="text-blue-600">฿0.00</span>
                         </div>
                         
                         <button id="checkout-button" class="w-full mt-6 py-3 bg-blue-600 text-white font-bold rounded-xl hover:bg-blue-700 transition-all duration-200 hover:scale-[1.03] hover:-translate-y-[2px]hover:shadow-xl disabled:bg-blue-600 disabled:hover:scale-100 disabled:hover:-translate-y-0 disabled:hover:shadow-none"disabled>
