--- a/cart.html
+++ b/cart.html
@@ -43,6 +43,10 @@
                                 <span>ค่าจัดส่ง (โดยประมาณ):</span>
                                 <span>฿0.00</span>
                             </div>
+                            <div class="flex justify-between text-sm text-gray-600">
+                                <span>ค่าธรรมเนียม 5 %:</span>
+                                <span><span id="fee-price">฿0.00</span></span>
+                            </div>
                         </div>
                         
                         <div class="flex justify-between text-lg font-bold text-gray-900 border-t pt-4">
