--- a/shop.html
+++ b/shop.html
@@ -9,11 +9,9 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap">
 </head>
 
-<body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col font-['Prompt',sans-serif]">
+<body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
 
     <navbar-eiei></navbar-eiei>
 
