--- a/shop.html
+++ b/shop.html
@@ -109,7 +109,7 @@
     </div>
 
     <div id="add-product-modal"
-        class="hidden fixed inset-0 bg-black/40 backdrop-blur-sm z-50 flex items-center justify-center p-4">
+        class="hidden fixed inset-0 bg-black/40 backdrop-blur-sm z-[9999] flex justify-center overflow-y-auto p-4">
         <div
             class="bg-white rounded-2xl shadow-2xl w-full max-w-2xl max-h-[90vh] overflow-y-auto transform transition-all">
             <div
@@ -124,7 +124,6 @@
             </div>
 
             <form id="add-product-form" onsubmit="shopManager.addProduct(event)" class="p-6 space-y-5">
-
                 <div>
                     <label for="title" class="block text-sm font-semibold text-gray-700 mb-2">ชื่อสินค้า <span
                             class="text-red-500">*</span></label>
