--- a/shop.html
+++ b/shop.html
@@ -9,6 +9,16 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style>
+        /* เพิ่ม CSS สำหรับ scrollbar ใน Modal */
+        .modal-scroll::-webkit-scrollbar {
+            width: 8px;
+        }
+        .modal-scroll::-webkit-scrollbar-thumb {
+            background-color: #cbd5e1; /* gray-300 */
+            border-radius: 4px;
+        }
+    </style>
 </head>
 
 <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
@@ -110,11 +120,11 @@
 
     <div id="add-product-modal"
         class="hidden fixed inset-0 bg-black/40 backdrop-blur-sm z-[110] flex justify-center overflow-y-auto p-4">
-        <div
-            class="bg-white rounded-2xl shadow-2xl w-full max-w-2xl max-h-[90vh] overflow-y-auto transform transition-all">
+        <div id="modal-content"
+            class="bg-white rounded-2xl shadow-2xl w-full max-w-2xl max-h-[90vh] overflow-y-auto modal-scroll transform transition-all">
             <div
                 class="p-6 border-b border-gray-100 flex justify-between items-center sticky top-0 bg-white z-10 rounded-t-2xl">
-                <h3 class="text-2xl font-bold text-gray-900 flex items-center gap-2">
+                <h3 id="modal-title" class="text-2xl font-bold text-gray-900 flex items-center gap-2">
                     <i data-lucide="plus-circle" class="w-6 h-6 text-green-600"></i> เพิ่มสินค้าใหม่
                 </h3>
                 <button onclick="shopManager.closeAddProductModal()"
@@ -123,7 +133,9 @@
                 </button>
             </div>
 
-            <form id="add-product-form" onsubmit="shopManager.addProduct(event)" class="p-6 space-y-5">
+            <form id="add-product-form" onsubmit="shopManager.addProductOrUpdate(event)" class="p-6 space-y-5">
+                <input type="hidden" id="product-id-to-edit" name="productId" value="">
+                
                 <div>
                     <label for="title" class="block text-sm font-semibold text-gray-700 mb-2">ชื่อสินค้า <span
                             class="text-red-500">*</span></label>
@@ -171,7 +183,7 @@
                 </div>
 
                 <div>
-                    <label for="hashtag" class="block text-sm font-semibold text-gray-700 mb-2">Hashtag</label>
+                    <label for="hashtag" class="block text-sm font-semibold text-gray-700 mb-2">Hashtag (หนึ่งรายการต่อบรรทัด)</label>
                     <textarea id="hashtag" name="hashtag" rows="2"
                         class="w-full px-4 py-3 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-transparent transition"
                         placeholder="#ของใหม่&#10;#พร้อมส่ง"></textarea>
@@ -179,7 +191,7 @@
 
 
                 <div>
-                    <label for="images" class="block text-sm font-semibold text-gray-700 mb-2">URL รูปภาพ</label>
+                    <label for="images" class="block text-sm font-semibold text-gray-700 mb-2">URL รูปภาพ (หนึ่ง URL ต่อบรรทัด)</label>
                     <textarea id="images" name="images" rows="4"
                         class="w-full px-4 py-3 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-transparent transition"
                         placeholder="https://example.com/img1.jpg&#10;https://example.com/img2.jpg"></textarea>
@@ -187,7 +199,7 @@
                 </div>
 
                 <div class="pt-4 border-t border-gray-100">
-                    <button type="submit"
+                    <button type="submit" id="modal-submit-btn"
                         class="w-full bg-green-600 text-white py-3.5 rounded-xl font-bold text-lg hover:bg-green-700 transition shadow-lg shadow-green-600/30">
                         บันทึกสินค้า
                     </button>
