--- a/shop.html
+++ b/shop.html
@@ -10,12 +10,11 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
-        /* เพิ่ม CSS สำหรับ scrollbar ใน Modal */
         .modal-scroll::-webkit-scrollbar {
             width: 8px;
         }
         .modal-scroll::-webkit-scrollbar-thumb {
-            background-color: #cbd5e1; /* gray-300 */
+            background-color: #cbd5e1;
             border-radius: 4px;
         }
     </style>
