--- a/pay.html
+++ b/pay.html
@@ -51,19 +51,54 @@
     </div>
 
     <!-- Bank Transfer Box -->
-    <div id="bank-box" class="hidden mt-4 p-4 border rounded-xl bg-gray-50">
-      <p class="font-semibold mb-2">เลือกธนาคารสำหรับการโอน</p>
+    <div id="bank-box" class="hidden mt-4 p-4 border border-green-300 rounded-xl bg-green-50">
+      <p class="font-semibold mb-3 text-green-700">เลือกธนาคารสำหรับการโอน</p>
 
-      <select id="bank-select" class="w-full p-2 border rounded-lg">
-        <option value="">— กรุณาเลือกธนาคาร —</option>
-        <option value="kbank">กสิกรไทย (KBank)</option>
-        <option value="scb">ไทยพาณิชย์ (SCB)</option>
-        <option value="ktb">กรุงไทย (KTB)</option>
-        <option value="bbl">กรุงเทพ (BBL)</option>
-        <option value="ttb">ทีทีบี (TTB)</option>
-      </select>
+      <div class="space-y-3">
 
-      <p class="text-sm text-gray-600 mt-2">** ระบบจะแสดงเลขบัญชีหลังจากเลือกธนาคาร **</p>
+        <!-- KBank -->
+        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
+          <input type="radio" name="bank" value="kbank" class="mr-3" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Kasikorn_Bank_logo.svg/1200px-Kasikorn_Bank_logo.svg.png"
+              class="w-8 h-8 mr-3 rounded" />
+          <span class="font-medium">กสิกรไทย (KBank)</span>
+        </label>
+
+        <!-- SCB -->
+        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
+          <input type="radio" name="bank" value="scb" class="mr-3" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Siam_Commercial_Bank_logo.svg/1024px-Siam_Commercial_Bank_logo.svg.png"
+              class="w-8 h-8 mr-3" />
+          <span class="font-medium">ไทยพาณิชย์ (SCB)</span>
+        </label>
+
+        <!-- KTB -->
+        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
+          <input type="radio" name="bank" value="ktb" class="mr-3" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Krung_Thai_Bank_logo.svg/1024px-Krung_Thai_Bank_logo.svg.png"
+              class="w-8 h-8 mr-3 rounded" />
+          <span class="font-medium">กรุงไทย (KTB)</span>
+        </label>
+
+        <!-- BBL -->
+        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
+          <input type="radio" name="bank" value="bbl" class="mr-3" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Bangkok_Bank_logo.svg/1024px-Bangkok_Bank_logo.svg.png"
+              class="w-8 h-8 mr-3" />
+          <span class="font-medium">กรุงเทพ (BBL)</span>
+        </label>
+
+        <!-- TTB -->
+        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
+          <input type="radio" name="bank" value="ttb" class="mr-3" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/TMBThanachart_Bank_logo.svg/1024px-TMBThanachart_Bank_logo.svg.png"
+              class="w-8 h-8 mr-3 rounded" />
+          <span class="font-medium">ทีทีบี (TTB)</span>
+        </label>
+
+      </div>
+
+      <p class="text-sm text-gray-600 mt-3">** ระบบจะแสดงเลขบัญชีหลังจากเลือกธนาคาร **</p>
     </div>
 
     <!-- PromptPay QR Box -->
@@ -84,7 +119,8 @@
   <!-- Script -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-        // ดึงข้อมูลราคาจาก localStorage
+
+        // โหลดข้อมูลราคา
         const data = JSON.parse(localStorage.getItem("checkout_data"));
         if (data) {
             document.getElementById("subtotal-price").textContent = data.subtotal.toLocaleString() + " บาท";
@@ -92,7 +128,7 @@
             document.getElementById("total-price").textContent = data.total.toLocaleString() + " บาท";
         }
 
-        // ระบบแสดงตัวเลือกธนาคาร & QR พร้อมเพย์
+        // แสดง/ซ่อนวิธีชำระเงิน
         const qrBox = document.getElementById("promptpay-qr-box");
         const bankBox = document.getElementById("bank-box");
         const paymentOptions = document.querySelectorAll(".payment-option");
