--- a/aboutme.html
+++ b/aboutme.html
@@ -60,7 +60,7 @@
         ไม่รู้ว่าราคาจริง + ค่าหิ้ว เท่าไหร่กันแน่
         ปัญหาเหล่านี้ทำให้หลายคนไม่กล้าใช้บริการ ทั้งที่ต้องการสินค้าอยู่จริง ๆ
         ดังนั้น HiwHub จึงถูกสร้างขึ้นเพื่อลด Pain Points เหล่านี้ทั้งหมด
-        และเปลี่ยนประสบการณ์ฝากหิ้วให้เป็นระบบที่ปลอดภัยและน่าเชื่อถือมากขึ้น</p>
+        และเปลี่ยนประสบการณ์ฝากหิ้วให้เป็นระบบที่ปลอดภัยและน่าเชื่อถือมากขึ้น</p><br>
     </div>
 
     <p><b>ทำไมต้องเลือกเรา?</b><br>
