--- a/pay.html
+++ b/pay.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>หน้าชำระเงิน</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body class="bg-gray-100 p-6">
   <div class="max-w-xl mx-auto bg-white p-6 rounded-2xl shadow-lg">
@@ -13,17 +14,14 @@
     <!-- Order Summary -->
     <div class="mb-6">
       <h2 class="text-lg font-semibold mb-2">รายการสั่งซื้อ</h2>
-
       <div class="flex justify-between border-b pb-2">
         <span>สินค้า</span>
         <span id="subtotal-price">0 บาท</span>
       </div>
-
       <div class="flex justify-between border-b pb-2 mt-2">
         <span>ค่าภาษี/ค่าธรรมเนียม</span>
         <span id="fee-price">0 บาท</span>
       </div>
-
       <div class="flex justify-between text-xl font-bold mt-3">
         <span>รวมทั้งสิ้น</span>
         <span id="total-price">0 บาท</span>
@@ -32,18 +30,15 @@
 
     <!-- Payment Methods -->
     <h2 class="text-lg font-semibold mb-2">เลือกวิธีการชำระเงิน</h2>
-
     <div class="space-y-3 mb-4">
       <label class="flex items-center p-3 border rounded-xl cursor-pointer hover:bg-gray-50">
         <input type="radio" name="payment" class="mr-3 payment-option" value="bank" />
         โอนผ่านธนาคาร
       </label>
-
       <label class="flex items-center p-3 border rounded-xl cursor-pointer hover:bg-gray-50">
         <input type="radio" name="payment" class="mr-3 payment-option" value="promptpay" />
         พร้อมเพย์
       </label>
-
       <label class="flex items-center p-3 border rounded-xl cursor-pointer hover:bg-gray-50">
         <input type="radio" name="payment" class="mr-3 payment-option" value="cod" />
         เก็บเงินปลายทาง (COD)
@@ -53,51 +48,15 @@
     <!-- Bank Transfer Box -->
     <div id="bank-box" class="hidden mt-4 p-4 border border-green-300 rounded-xl bg-green-50">
       <p class="font-semibold mb-3 text-green-700">เลือกธนาคารสำหรับการโอน</p>
-
       <div class="space-y-3">
-
-        <!-- KBank -->
+        <!-- ตัวอย่างธนาคาร -->
         <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
           <input type="radio" name="bank" value="kbank" class="mr-3" />
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Kasikorn_Bank_logo.svg/1200px-Kasikorn_Bank_logo.svg.png"
-              class="w-8 h-8 mr-3 rounded" />
+               class="w-8 h-8 mr-3 rounded" />
           <span class="font-medium">กสิกรไทย (KBank)</span>
         </label>
-
-        <!-- SCB -->
-        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
-          <input type="radio" name="bank" value="scb" class="mr-3" />
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Siam_Commercial_Bank_logo.svg/1024px-Siam_Commercial_Bank_logo.svg.png"
-              class="w-8 h-8 mr-3" />
-          <span class="font-medium">ไทยพาณิชย์ (SCB)</span>
-        </label>
-
-        <!-- KTB -->
-        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
-          <input type="radio" name="bank" value="ktb" class="mr-3" />
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Krung_Thai_Bank_logo.svg/1024px-Krung_Thai_Bank_logo.svg.png"
-              class="w-8 h-8 mr-3 rounded" />
-          <span class="font-medium">กรุงไทย (KTB)</span>
-        </label>
-
-        <!-- BBL -->
-        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
-          <input type="radio" name="bank" value="bbl" class="mr-3" />
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Bangkok_Bank_logo.svg/1024px-Bangkok_Bank_logo.svg.png"
-              class="w-8 h-8 mr-3" />
-          <span class="font-medium">กรุงเทพ (BBL)</span>
-        </label>
-
-        <!-- TTB -->
-        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
-          <input type="radio" name="bank" value="ttb" class="mr-3" />
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/TMBThanachart_Bank_logo.svg/1024px-TMBThanachart_Bank_logo.svg.png"
-              class="w-8 h-8 mr-3 rounded" />
-          <span class="font-medium">ทีทีบี (TTB)</span>
-        </label>
-
       </div>
-
       <p class="text-sm text-gray-600 mt-3">** ระบบจะแสดงเลขบัญชีหลังจากเลือกธนาคาร **</p>
     </div>
 
@@ -111,7 +70,7 @@
     </div>
 
     <!-- Pay Button -->
-    <button class="mt-6 w-full bg-blue-600 text-white py-3 rounded-xl text-lg hover:bg-blue-700">
+    <button id="confirm-payment" class="mt-6 w-full bg-blue-600 text-white py-3 rounded-xl text-lg hover:bg-blue-700">
       ยืนยันการชำระเงิน
     </button>
   </div>
@@ -119,7 +78,6 @@
   <!-- Script -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-
         // โหลดข้อมูลราคา
         const data = JSON.parse(localStorage.getItem("checkout_data"));
         if (data) {
@@ -149,8 +107,22 @@
                 }
             });
         });
+
+        // กดปุ่มยืนยันการชำระเงิน
+        document.getElementById("confirm-payment").addEventListener("click", () => {
+            Swal.fire({
+                icon: "success",
+                title: "ชำระเงินสำเร็จ!",
+                text: "กำลังนำคุณกลับไปยังหน้าหลัก...",
+                timer: 2000,
+                showConfirmButton: false
+            });
+
+            setTimeout(() => {
+                window.location.href = "index.html"; // กลับไปหน้าหลัก
+            }, 2000);
+        });
     });
   </script>
-
 </body>
 </html>
