--- a/pay.html
+++ b/pay.html
@@ -47,14 +47,25 @@
 
     <!-- Bank Transfer Box -->
     <div id="bank-box" class="hidden mt-4 p-4 border border-green-300 rounded-xl bg-green-50">
-      <p class="font-semibold mb-3 text-green-700">เลือกธนาคารสำหรับการโอน</p>
+      <p class="font-semibold mb-3 text-green-700">เลือกธนาคารสำหรับการโอน (เลือกได้ 1 ธนาคาร)</p>
       <div class="space-y-3">
-        <!-- ตัวอย่างธนาคาร -->
         <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
-          <input type="radio" name="bank" value="kbank" class="mr-3" />
+          <input type="radio" name="bank" value="กสิกรไทย (KBank)" class="mr-3" />
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Kasikorn_Bank_logo.svg/1200px-Kasikorn_Bank_logo.svg.png"
                class="w-8 h-8 mr-3 rounded" />
           <span class="font-medium">กสิกรไทย (KBank)</span>
+        </label>
+        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
+          <input type="radio" name="bank" value="ไทยพาณิชย์ (SCB)" class="mr-3" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Siam_Commercial_Bank_logo.svg/1024px-Siam_Commercial_Bank_logo.svg.png"
+               class="w-8 h-8 mr-3 rounded" />
+          <span class="font-medium">ไทยพาณิชย์ (SCB)</span>
+        </label>
+        <label class="flex items-center p-3 border rounded-xl cursor-pointer bg-white hover:bg-green-50">
+          <input type="radio" name="bank" value="กรุงไทย (KTB)" class="mr-3" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Krung_Thai_Bank_logo.svg/1024px-Krung_Thai_Bank_logo.svg.png"
+               class="w-8 h-8 mr-3 rounded" />
+          <span class="font-medium">กรุงไทย (KTB)</span>
         </label>
       </div>
       <p class="text-sm text-gray-600 mt-3">** ระบบจะแสดงเลขบัญชีหลังจากเลือกธนาคาร **</p>
@@ -110,10 +121,26 @@
 
         // กดปุ่มยืนยันการชำระเงิน
         document.getElementById("confirm-payment").addEventListener("click", () => {
+            const selectedPayment = document.querySelector('input[name="payment"]:checked')?.value;
+            const selectedBank = document.querySelector('input[name="bank"]:checked')?.value;
+
+            if (!selectedPayment) {
+                Swal.fire({ icon: "warning", title: "กรุณาเลือกวิธีชำระเงิน" });
+                return;
+            }
+
+            if (selectedPayment === "bank" && !selectedBank) {
+                Swal.fire({ icon: "warning", title: "กรุณาเลือกธนาคาร" });
+                return;
+            }
+
+            let message = "ชำระเงินสำเร็จ!";
+            if (selectedPayment === "bank") message += "<br>ธนาคาร: " + selectedBank;
+
             Swal.fire({
                 icon: "success",
-                title: "ชำระเงินสำเร็จ!",
-                text: "กำลังนำคุณกลับไปยังหน้าหลัก...",
+                title: "สำเร็จ!",
+                html: message,
                 timer: 2000,
                 showConfirmButton: false
             });
